--- a/index.html
+++ b/index.html
@@ -1,67 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-xmlns:fb="https://www.facebook.com/2008/fbml" xmlns:og="http://ogp.me/ns#"
-xml:lang="en" lang="ja">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="css/common_low.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="css/terms.css" media="screen">
-</head>
+<html>
 <body>
-    <div id="m1" style="display:none;">
-      <div align="center">
-        <button type="button" class="btn_to_common" value="" onclick="so_optout();">ターゲティング広告配信を停止する</button>
-      </div><br/>
-      <dl class="targetting">
-        <dt>お客様の現在のステータス</dt>
-        <dd style="margin-left: 10px;">このブラウザではターゲティング広告の配信が有効になっています。</dd>
-      </dl>
-    </div>
-    <div id="m2" style="display:none;">
-      <div align="center">
-        <button type="button" class="btn_to_common" value="" onclick="so_optout_cancel();">ターゲティング広告配信を有効にする</button>
-      </div><br/>
-      <dl class="targetting">
-        <dt>お客様の現在のステータス</dt>
-        <dd style="margin-left: 10px;">このブラウザではターゲティング広告の配信が無効になっています。</dd>
-      </dl>
-    </div>
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script language="javascript">
-  (function(){
-    $.ajax({
-      type: 'GET',
-      url: 'http://tg.socdm.com/aux/is_optout',
-      dataType: 'jsonp',
-      cache: false,
-      success: function(data) {
-        if (data.is_optout) {
-          document.getElementById('m2').style.display='block';
-        } else {
-          document.getElementById('m1').style.display='block';
-        }
-    }});
-  })();
-  function so_optout() {
-    $.ajax({
-      type: 'GET',
-      url: 'http://tg.socdm.com/aux/optout',
-      dataType: 'jsonp',
-      cache: false,
-      success: function(data) {
-        location.reload();
-    }});
-  }
-  function so_optout_cancel(){
-    $.ajax({
-      type: 'GET',
-      url: 'http://tg.socdm.com/aux/optin',
-      dataType: 'jsonp',
-      cache: false,
-      success: function(data) {
-        location.reload();
-    }});
-  }
-  </script>
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=appbank&attr_raw=game%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
 </body>
 </html>
