--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,5 @@
 <html>
 <body>
-<!-- Segment Pixel - 監視セグメント1 - DO NOT MODIFY -->
-<img height='1' src='http://tg.test.socdm.com/sa/img?said=sg9822&t=2' style='position:absolute;border:none;padding:0;margin:0;' width='1' />
-<!-- End of Segment Pixel -->
-
+<img height='1' src='https://ssl.socdm.com/sa/img?said=sg22997-s&t=2' style='position:absolute;border:none;padding:0;margin:0;' width='1' />
 </body>
 </html>
