--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,7 @@
 <html>
 <body>
-<img height='1' src='https://ssl.socdm.com/sa/img?said=sg22997-s&t=2' style='position:absolute;border:none;padding:0;margin:0;' width='1' />
+<img src="http://tg.socdm.com/aux/extsync?aid=fullout&sid=minkabu&attr_raw=kabu%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
+<img src="http://tg.socdm.com/aux/extsync?aid=fullout&sid=minkabu&attr_raw=fx%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
+<img src="http://tg.socdm.com/aux/extsync?aid=fullout&sid=minkabu&attr_raw=other%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
 </body>
 </html>
