--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,17 @@
 <html>
 <body>
-<img src="http://tg.socdm.com/aux/extsync?aid=fullout&sid=minkabu&attr_raw=kabu%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
-<img src="http://tg.socdm.com/aux/extsync?aid=fullout&sid=minkabu&attr_raw=fx%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
-<img src="http://tg.socdm.com/aux/extsync?aid=fullout&sid=minkabu&attr_raw=other%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
+<script language="JavaScript" type="text/javascript">
+//<![CDATA[
+(function() {
+          var random = new Date();
+            
+              var so_src = ('https:' == document.location.protocol ? 'https://tg.test.socdm.com' : 'http://tg.test.socdm.com') +
+                '/adsv/v1?posall=CCC&id=8313&t=js&rnd='+ random.getTime() + '&tp=' + encodeURIComponent(document.location.href) + '&pp=' + encodeURIComponent(document.referrer);
+                  
+                     document.write('<sc'+'ript language="JavaScript" type="text/javascript" src="'+so_src+'"></sc'+'ript>');
+})();
+//]]>
+</script>
+
 </body>
 </html>
