--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@ test
 <img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a7%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
 <img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a8%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
 test2
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_natalie&attr_raw=movie%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
 </body>
 </html>
