--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <html>
 <body>
 test
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a1%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a2%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a3%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a4%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a5%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a6%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a7%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=jmty&attr_raw=a8%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
+中学生(男性)
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=furyu&attr_raw=a1%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
+
+中学生(女性)
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=furyu&attr_raw=a2%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
+
+高校生(男性)
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=furyu&attr_raw=a3%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
+
+高校生(女性)
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=furyu&attr_raw=a4%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
+
+大学生(男性)
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=furyu&attr_raw=a5%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
+
+大学生(女性)
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=furyu&attr_raw=a6%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
 test2
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_natalie&attr_raw=movie%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
 </body>
 </html>
