--- a/index2.html
+++ b/index2.html
@@ -1,17 +1,7 @@
 <html>
 <body>
-<script language="JavaScript" type="text/javascript">
-//<![CDATA[
-(function() {
-          var random = new Date();
-            
-              var so_src = ('https:' == document.location.protocol ? 'https://tg.test.socdm.com' : 'http://tg.test.socdm.com') +
-                '/adsv/v1?posall=CCC&id=8313&t=js&rnd='+ random.getTime() + '&tp=' + encodeURIComponent(document.location.href) + '&pp=' + encodeURIComponent(document.referrer);
-                  
-                     document.write('<sc'+'ript language="JavaScript" type="text/javascript" src="'+so_src+'"></sc'+'ript>');
-})();
-//]]>
-</script>
-
+test
+<img height='1' src='http://tg.socdm.com/sa/img?said=sg9818&t=2' style='display:none;border:none;padding:0;margin:0;' width='1' />
+test2
 </body>
 </html>
