--- a/index2.html
+++ b/index2.html
@@ -10,10 +10,7 @@ document.addEventListener('DOMContentLoaded', function() {
     var creative_id = '1111';
     var rc_default_img = 'http://i.socdm.com/a/0/23/32188/20131012003523-a8dba2bdda9d65.jpg';
     var rc_click_url = '${CLICK_URL_1}http://www.peachjohn.co.jp/?banner_id=rtoasterads_300_250_1_PC';
-    var rc_data = {"click_url":"http:\/\/tg.test.socdm.com\/rd\/v1\/c\/chsm=47,6806aae1\/8313\/BBB\/6410
-\/745.5489.6410\/1859\/9627\/8313:BBB\/g\/http:\/\/scaleout.jp","img_url":"http:\/\/i.socdm.com","item_lists" 
-:[{"button_label":"今すぐ購入","category":"ranking","items":[]}],"optout":"http:\/\/scaleout.jp\/optout","replace" 
-:{"discount":"dct","price":"field6"}};
+    var rc_data = var rc_data = {"click_url":"http:\/\/tg.test.socdm.com\/rd\/v1\/c\/chsm=47,6806aae1\/8313\/BBB\/6410\/745.5489.6410\/1859\/9627\/8313:BBB\/g\/http:\/\/scaleout.jp","img_url":"http:\/\/i.socdm.com","item_lists" :[{"button_label":"今すぐ購入","category":"ranking","items":[]}],"optout":"http:\/\/scaleout.jp\/optout","replace" :{"discount":"dct","price":"field6"}};
 
     var resizeImg = function(_this, resize_w, resize_h) {
       var orgWidth = _this.width;
