--- a/index2.html
+++ b/index2.html
@@ -2,18 +2,11 @@
 <body>
 test
 
-<script language="JavaScript" type="text/javascript">
-//<![CDATA[
-(function() {
-  var random = new Date();
-  
-  var so_src = ('https:' == document.location.protocol ? 'https://tg.test.socdm.com' : 'http://tg.test.socdm.com') +
-  '/adsv/v1?posall=CCC&id=8313&t=js&rnd='+ random.getTime() + '&tp=' + encodeURIComponent(document.location.href) + '&pp=' + encodeURIComponent(document.referrer);
-  
-   document.write('<sc'+'ript language="JavaScript" type="text/javascript" src="'+so_src+'"></sc'+'ript>');
-})();
-//]]>
-</script>
+不動産(c1)
+<img src="http://tg.socdm.com/aux/extsync?aid=vasta&sid=page_category&attr_raw=c1%3d1" style="display:none;border:none;padding:0;margin:0;" width="1" height="1"/>
+
+グルメ(c2)
+<img src="http://tg.socdm.com/aux/extsync?aid=vasta&sid=page_category&attr_raw=c1%3d1" style="display:none;border:none;padding:0;margin:0;" width="1" height="1"/>
 
 test2
 test3
