--- a/index2.html
+++ b/index2.html
@@ -2,11 +2,7 @@
 <body>
 test
 
-不動産(c1)
-<img src="http://tg.socdm.com/aux/extsync?aid=vasta&sid=page_category&attr_raw=c1%3d1" style="display:none;border:none;padding:0;margin:0;" width="1" height="1"/>
-
-グルメ(c2)
-<img src="http://tg.socdm.com/aux/extsync?aid=vasta&sid=page_category&attr_raw=c2%3d1" style="display:none;border:none;padding:0;margin:0;" width="1" height="1"/>
+<script src="http://bigman-test.scaleout.jp/sdk/js/adg-script-loader.js?id=9985&targetID=adg_9985&displayid=1&adType=SP&async=false&tagver=2.0.0"></script>
 
 test2
 test3
