--- a/index.html
+++ b/index.html
@@ -19,5 +19,16 @@ test
 大学生(女性)
 <img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=furyu&attr_raw=a6%3d1" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1"/>
 test2
+
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T55PQK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-T55PQK');</script>
+<!-- End Google Tag Manager -->
+
 </body>
 </html>
