--- a/bnews/terms_of_service.html
+++ b/bnews/terms_of_service.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-<meta name="viewport" content="initial-scale=1.0">
+<meta name="viewport" content="width=device-width">
 <title>利用規約</title>
 </head>
 <body>
