--- a/bnews/terms_of_service.html
+++ b/bnews/terms_of_service.html
@@ -1,36 +1,31 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>利用規約</title>
 </head>
 <body>
 <h1>利用規約</h1>
 
-<pre>
 B news for Baystars(以下、本サービス)は、プロ野球 横浜DeNAベイスターズの情報を快適にチェック出来るように開発されたリーダーアプリです。
 
 本サービスの利用者は本規約の内容に同意した上で利用するものとします。
-</pre>
+
 
 <h2>利用規定の変更</h2>
-<pre>
 利用者の事前の了承を得ることなく、本規約を改定することができ、利用者は、それを承諾するものとします。
-</pre>
 
 <h2>禁止事項</h2>
-<pre>
 本サービスを利用するにあたって、以下の行為は行ってはならないものとします。
 
-- 本サービスで提供するアプリケーションの通信内容の解読、解析、逆コンパイル、逆アセンブルまたは、リバースエンジニアリングする行為。
-- 本サービスの信用を毀損する行為、またはそのおそれのある行為
-- 対象設備に必要以上に負荷をかける行為
-- その他、本サービスを運営する上で不適切と判断する行為
-</pre>
+<ul>
+<li>本サービスで提供するアプリケーションの通信内容の解読、解析、逆コンパイル、逆アセンブルまたは、リバースエンジニアリングする行為</li>
+<li>本サービスの信用を毀損する行為、またはそのおそれのある行為</li>
+<li>対象設備に必要以上に負荷をかける行為</li>
+<li>その他、本サービスを運営する上で不適切と判断する行為</li>
+</ul>
 
 <h2>免責事項</h2>
-<pre>
 本サービスは、利用者が自身の判断と責任において、利用するものとし、本サービスを利用して生じたいかなる損失または損害についても、一切の責任を負わないものとします。
-</pre>
 </body>
 </html>
