--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 test
-<script src='https://ssl.socdm.com/sa/js?said=sg15502-s' type='text/javascript'></script>
+<img src="//tg.socdm.com/aux/extsync?aid=aaa&uid=1111" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1" />
 </body>
 </html>
