--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
 test
 <img src="//tg.socdm.com/aux/extsync?aid=aaa&sid=&uid=1111" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1" />
+<iframe width="800" height="100" src="http://oo.socdm.com/index.html" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" id="optout"></iframe>
 </body>
 </html>
