--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <body>
-test
+<a href="http://yahoo.co.jp">yahoo</a>
+<a href="https://www.google.co.jp">google</a>
 <img src="//tg.socdm.com/aux/extsync?aid=aaa&sid=&uid=1111" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1" />
-<iframe width="800" height="100" src="http://oo.socdm.com/index.html" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" id="optout"></iframe>
+
+<script src="http://i.socdm.com/s/so_redirector.js" type="text/javascript"></script>
 </body>
 </html>
