--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <a href="https://www.google.co.jp">google</a>
 <img src="//tg.socdm.com/aux/extsync?aid=aaa&sid=&uid=1111" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1" />
 <img src="//tg.socdm.com/aux/extsync?aid=g&sid=&uid=[御社のuid]" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-
+<img src="http://tg.socdm.com/aux/idsync?proto=appvador" width="1" height="1" style="display:none;position:absolute;border:none;padding:0;margin:0;" />
 <script src="http://i.socdm.com/s/so_redirector.js" type="text/javascript"></script>
 </body>
 </html>
