--- a/index2.html
+++ b/index2.html
@@ -1,20 +1,17 @@
 <html>
 <body>
 test
-<!-- Conversion Pixel - データフィード - DO NOT MODIFY -->
+<!-- Segment Pixel - データフィード - DO NOT MODIFY -->
 <script type='text/javascript'>
   //<![CDATA[
     var supership_pixel_params = {
-      datafeed_conversions: [
-        { product_id: "STRING_PRODUCT_ID_1", price: INTEGER_PRICE_1 },
-        { product_id: "STRING_PRODUCT_ID_2", price: INTEGER_PRICE_2 }
-      ]
+      datafeed_product_id: "STRING_PRODUCT_ID"
     };
   //]]>
 </script>
-<script src='//tg.test.socdm.com/s/so_sg.js?cvid=1910&datafeed=cv-14253' type='text/javascript'></script>
-<!-- End of Conversion Pixel -->
-test
+<script src='//tg.test.socdm.com/s/so_sg.js?datafeed=detail-14253&sgid=9883' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
+aaa
 <!-- Segment Pixel - データフィード - DO NOT MODIFY -->
 <script type='text/javascript'>
   //<![CDATA[
@@ -27,5 +24,9 @@ test
 <!-- End of Segment Pixel -->
 test2
 test3
+<script type='text/javascript'>
+console.log('test');
+</script>
+
 </body>
 </html>
