--- a/rt_datafeed.html
+++ b/rt_datafeed.html
@@ -5,7 +5,7 @@ test
 <script type='text/javascript'>
   //<![CDATA[
     var supership_pixel_params = {
-      datafeed_product_id: "STRING_PRODUCT_ID"
+      datafeed_product_id: "1111"
     };
   //]]>
 </script>
@@ -16,7 +16,7 @@ aaa
 <script type='text/javascript'>
   //<![CDATA[
     var supership_pixel_params = {
-      datafeed_product_id: "STRING_PRODUCT_ID"
+      datafeed_product_id: "2222"
     };
   //]]>
 </script>
