--- a/cv_datafeed.html
+++ b/cv_datafeed.html
@@ -16,6 +16,19 @@ test
 <!-- End of Conversion Pixel -->
 
 test2
+<!-- Conversion Pixel - データフィード - DO NOT MODIFY -->
+<script type='text/javascript'>
+  //<![CDATA[
+    var supership_pixel_params = {
+      datafeed_conversions: [
+        { product_id: "3333", price: 3000 }
+      ]
+    };
+  //]]>
+</script>
+<script src='//tg.test.socdm.com/s/so_sg.js?cvid=1910&datafeed=cv-14253' type='text/javascript'></script>
+<!-- End of Conversion Pixel -->
+
 test3
 <script type='text/javascript'>
 console.log('test');
