--- a/gtm.html
+++ b/gtm.html
@@ -15,5 +15,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WNQX4G');</script>
 <!-- End Google Tag Manager -->
 
+後続処理<br/>
+<script>
+  document.write("document_write");
+  console.log("aaa");
+</script>
 </body>
 </html>
