--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <html>
 <body>
-<a href="http://yahoo.co.jp">yahoo</a>
-<a href="https://www.google.co.jp">google</a>
-<img src="//tg.socdm.com/aux/extsync?aid=aaa&sid=&uid=1111" style="position:absolute;border:none;padding:0;margin:0;" width="1" height="1" />
-<img src="//tg.socdm.com/aux/extsync?aid=g&sid=&uid=[御社のuid]" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<iframe src="//apvdr.com/v2/cs.php" style="display:none;position:absolute;bottom:0px;right:0px;height:0px;width:0px;"></iframe>
-<script src="http://i.socdm.com/s/so_redirector.js" type="text/javascript"></script>
+<!-- Conversion Pixel - KDDI株式会社_auショッピングモール - DO NOT MODIFY -->
+<script type='text/javascript'>
+  //<![CDATA[
+  var arr = [];
+  "aaa|bbb|ccc".split("|").forEach(
+     function(id){
+           arr.push(JSON.stringify({prouct_id: id, price: 0}));
+     }
+   );
+   var supership_pixel_params = JSON.stringify({datafeed_conversions: arr});
+  //]]>
+</script>
+<script src='//tg.socdm.com/s/so_sg.js?cvid=9571&datafeed=cv-14253' type='text/javascript'></script>
+<!-- End of Conversion Pixel -->
 </body>
 </html>
