--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
    var supership_pixel_params = JSON.parse(JSON.stringify({datafeed_conversions: arr}));
   //]]>
 </script>
-<script src='//tg.socdm.com/s/so_sg.js?cvid=9571&datafeed=cv-14253' type='text/javascript'></script>
+<script src='https://ssl.socdm.com/s/so_sg.js?cvid=9571&datafeed=cv-14253' type='text/javascript'></script>
 <!-- End of Conversion Pixel -->
 
+
+<!-- Segment Pixel - KDDI株式会社_auショッピングモール - DO NOT MODIFY -->
+<script type='text/javascript'>
+  //<![CDATA[
+    var ecomm_prodid = (/item\/(\d+)/.exec(location.pathname) ? /item\/(\d+)/.exec(location.pathname)[1] : /\?id=(\d+)/.exec(location.href)[1]);
+    var supership_pixel_params = {
+      datafeed_product_id: ecomm_prodid
+    };
+  //]]>
+</script>
+<script src='https://ssl.socdm.com/s/so_sg.js?datafeed=detail-14253&sgid=34868' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
 </body>
 </html>
