--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   var arr = [];
   "aaa|bbb|ccc".split("|").forEach(
      function(id){
-           arr.push({prouct_id: id, price: 0});
+           arr.push({product_id: id, price: 0});
      }
    );
    var supership_pixel_params = {datafeed_conversions: arr};
