--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <body>
+<div id="apvad-64fed952a457b4f1709669c652538f23" style="position:relative;margin-left:auto;margin-right:auto;width:300px;" data-adformat="rect"></div>
+<script type="text/javascript" src="//dev1.srv.appvador.com/endpoints2/uvat.js.php?s=64fed952a457b4f1709669c652538f23"></script>
+
+
 <!-- Conversion Pixel - KDDI株式会社_auショッピングモール - DO NOT MODIFY -->
 <script type='text/javascript'>
   //<![CDATA[
