--- a/index2.html
+++ b/index2.html
@@ -2,21 +2,26 @@
 <body>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-
-
-<script type="text/javascript" src="http://test4649.github.io/ViewabilityTracker.js"/>
-<script type="text/javascript">
-var v = new APV.ViewabilityTracker(document.getElementById('target'), 'http://gwks.heteml.jp/apvtest/dev/vast/inview');
-v.start();
-</script>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div style="background-color: #000;width:300px;height:250px;margin:0 auto;padding:0;text-align:center;color:#fff;" id="target">
+        viewability check 300x250
+</div>
 
 <script type="text/javascript" src="http://test4649.github.io/ViewabilityTracker.js"/>
 <script type="text/javascript">
 var v = new APV.ViewabilityTracker(document.getElementById('target'), 'http://gwks.heteml.jp/apvtest/dev/vast/inview');
 v.start();
 </script>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div style="background-color: #000;width:300px;height:250px;margin:0 auto;padding:0;text-align:center;color:#fff;" id="target2">
+        viewability check 300x250
+      </div>
+<script type="text/javascript" src="http://test4649.github.io/ViewabilityTracker.js"/>
+<script type="text/javascript">
+var v = new APV.ViewabilityTracker(document.getElementById('target2'), 'http://gwks.heteml.jp/apvtest/dev/vast/inview');
+v.start();
+</script>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
