--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
         viewability check 300x250
 </div>
 
-<script type="text/javascript" src="http://test4649.github.io/ViewabilityTracker.js"/>
+<script src="http://test4649.github.io/ViewabilityTracker.js"/>
 <script type="text/javascript">
 var v = new APV.ViewabilityTracker(document.getElementById('target'), 'http://gwks.heteml.jp/apvtest/dev/vast/inview');
 v.start();
