--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
         viewability check 300x250
 </div>
 
-<script src="http://s3-ap-northeast-1.amazonaws.com/dev1-cloudfront-creative/js/ViewabilityTracker.js"/>
+<script src="http://s3-ap-northeast-1.amazonaws.com/dev1-cloudfront-creative/js/ViewabilityTracker.js"></script>
 <script type="text/javascript">
 var v = new APV.ViewabilityTracker(document.getElementById('target'), 'http://gwks.heteml.jp/apvtest/dev/vast/inview');
 v.start();
