--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,11 @@
 <html>
 <body>
+<!--
 <div id="apvad-5a646702bef99f3ad8d5a8d3a8d7946a" style="position:relative;margin-left:auto;margin-right:auto;width:300px;" data-adformat="rect"></div>
 <script type="text/javascript" src="//apvdr.com/v2/coad.js.php?s=5a646702bef99f3ad8d5a8d3a8d7946a&brd={CLICK_URL_ENC}"></script>
+-->
+<div id="apvad-54b4743c6eb978dd36c8183b394f8587" style="position:relative;margin-left:auto;margin-right:auto;width:300px;" data-adformat="rect"></div>    
+<script type="text/javascript" src="//apvdr.com/v2/coad.js.php?s=54b4743c6eb978dd36c8183b394f8587"></script>    
+ <script type="text/javascript" src="//cdn.apvdr.com/js/apv-ifbstr.min.js"></script>
 </body>
 </html>
